--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,23 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 body {
+    margin: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #121212; /* Açık siyah */
-    color: #ffffff; /* Beyaz yazılar */
+    background-color: #1c1c1c;
+    color: #f5f5f5;
 }
 
 header {
-    background-color: #1e1e1e; /* Koyu gri */
-    padding: 20px 0;
+    background-color: #141414;
+    padding: 20px;
+    text-align: center;
 }
 
-header .container {
-    max-width: 1200px;
-    margin: auto;
-    text-align: center;
+header h1 {
+    margin: 0;
 }
 
 nav ul {
     list-style: none;
+    padding: 0;
 }
 
 nav ul li {
@@ -30,41 +25,35 @@ nav ul li {
     margin: 0 15px;
 }
 
-nav a {
-    color: #007acc; /* Koyu mavi */
+nav ul li a {
+    color: #0a84ff;
     text-decoration: none;
 }
 
-.hero {
-    background-color: #282828; /* Daha açık siyah */
-    padding: 50px 0;
+.hero-section {
     text-align: center;
-}
-
-.hero h2 {
-    font-size: 2.5em;
+    padding: 100px 20px;
+    background-color: #333;
 }
 
 .btn {
-    background-color: #007acc; /* Koyu mavi */
-    color: #ffffff;
+    background-color: #0a84ff;
+    color: white;
     padding: 10px 20px;
     text-decoration: none;
-    border-radius: 5px;
+    margin-top: 10px;
+    display: inline-block;
 }
 
-.container {
-    max-width: 1200px;
-    margin: auto;
+.card-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.card {
+    background-color: #292929;
     padding: 20px;
-}
-
-.about, .posts, .cve, .contact {
-    margin: 40px 0;
-}
-
-footer {
-    background-color: #1e1e1e;
-    text-align: center;
-    padding: 10px 0;
+    width: 30%;
+    border-radius: 8px;
 }
