--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ body {
 .cve-list, .blog-list {
     list-style: none;
     padding: 0;
-    font-size: 1.1rem;
+    font-size: 0.9rem; /* Küçültülmüş boyut */
     line-height: 1.6;
 }
 
@@ -114,4 +114,3 @@ body {
     background-color: #2a2a2a;
     margin-top: 20px;
 }
-
