--- a/styles.css
+++ b/styles.css
@@ -58,14 +58,14 @@ body {
     border-radius: 5px;
 }
 
-.featured-section, .cve-section, .articles-section {
+.featured-section {
     margin: 20px 0;
     padding: 20px;
     background-color: #1b1b1b;
     border-radius: 8px;
 }
 
-.featured-title, h2 {
+.featured-title {
     text-align: center;
     font-size: 1.8rem;
     margin-bottom: 15px;
@@ -92,10 +92,28 @@ body {
     margin-bottom: 10px;
 }
 
-.cve-container, .blog-container {
+.two-column-layout {
     display: flex;
     justify-content: space-between;
-    gap: 15px;
+}
+
+.cve-section, .articles-section {
+    width: 48%; /* Her iki bölüm de sayfanın yarısını kaplasın */
+    background-color: #1b1b1b;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.cve-title, .articles-title {
+    text-align: left; /* Başlık sola hizalandı */
+    font-size: 1.5rem; /* Başlık boyutu küçültüldü */
+    margin-bottom: 15px;
+}
+
+.cve-container, .blog-container {
+    display: flex;
+    flex-direction: column; /* Alt alta dizilim */
+    gap: 10px;
 }
 
 .cve-card, .blog-card {
