--- a/styles.css
+++ b/styles.css
@@ -135,3 +135,26 @@ body {
     background-color: #2a2a2a;
     margin-top: 20px;
 }
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.card {
+    background-color: #2a2a2a;
+    padding: 20px;
+    border-radius: 8px;
+    width: 20%; /* Kart genişliğini küçült */
+    text-align: center; /* Resim ve metin ortalanacak */
+    margin: 10px; /* Kartlar arasında boşluk bırak */
+}
+
+.card-image {
+    width: 100%; /* Kartın genişliğine göre ayarlanır */
+    max-width: 200px; /* Maksimum genişliği 200 piksel ile sınırla */
+    height: auto; /* Orantılı yükseklik */
+    border-radius: 8px; /* Kenarları yuvarlatma */
+    margin-bottom: 10px; /* Resim ile metin arasında boşluk */
+}
+
