--- a/styles.css
+++ b/styles.css
@@ -157,4 +157,53 @@ body {
     border-radius: 8px; /* Kenarları yuvarlatma */
     margin-bottom: 10px; /* Resim ile metin arasında boşluk */
 }
-
+nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: 600;
+        }
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+        .info-section, .cve-details {
+            background: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            margin: 20px 0;
+        }
+        h2 {
+            color: #e74c3c;
+            font-weight: 600;
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+        h3 {
+            color: #333;
+            font-size: 1.5em;
+            margin-top: 15px;
+            margin-bottom: 5px;
+        }
+        p {
+            color: #555;
+            line-height: 1.6;
+            font-size: 1.1em;
+        }
+        ul {
+            list-style-type: square;
+            padding-left: 20px;
+        }
+        ul li {
+            margin-bottom: 10px;
+        }
+        strong {
+            color: #e67e22;
+        }
