--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ body {
             text-decoration: underline;
         }
         .info-section, .cve-details {
-            background: #f8f8f8; /* Koyu beyaz arka plan */
+            background: #000000; /* Koyu beyaz arka plan */
             border-radius: 10px;
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
